# isacc-messaging-service

./: Dockerfile  commands.sh  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: test.yaml
isacc_messaging/: app.py  audit.py  config.py  exceptions.py  robust_request.py
isacc_messaging/api/: email_notifications.py  fhir.py  isacc_record_creator.py  ml_utils.py  views.py
isacc_messaging/models/: email.py  fhir.py  isacc_communication.py  isacc_communicationrequest.py  isacc_fhirdate.py  isacc_patient.py  isacc_practitioner.py
migration/: migration.py
migrations/: commands.py  migration.py  migration_resource.py  utils.py  views.py
migrations/example/: ReadME.md
migrations/example/versions/: add_identifier.py  create_patient.py
migrations/versions/: 001_initial.py  5c929f8e-bd11-4283-9603-40613839d23a.py  6c929f8e-bd11-4283-9603-40613839d23a.py  7c929f8e-bd11-4283-9603-40613839d23a.py  patch_DEEP_FUTURE_last_unfollowedup.py  recalculate-next-outgoing-times.py  test_7c929f8e-bd11-4283-9603-40613839d23a.py  test_migration_0.py
tests/: conftest.py  migration_list_test.py  migration_test.py  test_app.py  test_models.py
tests/test_models/: patient_218.json  patient_69.json  patient_70.json  practitioner_57.json
