# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = isacc_messaging

[options]
packages = isacc_messaging
zip_safe = False
include_package_data = True

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
# pinned fhirclient to older version to mitigate
# changes in date requirement introduced in FHIRDate
install_requires =
    authlib
    fhirclient==4.1.0
    flask
    flask-cors
    flask-session
    gunicorn
    python-jose[cryptography]
    python-json-logger
    redis
    requests
    requests-cache
    twilio

[options.extras_require]
dev =
    pytest
    pytest-mock
    pytest-redis
    requests-mock

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*
